Fix Jacoco, report and Cover. Now write more tests.